# reversi-game

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: npm-publish-github-packages.yml
src/: ai.rs  draw.rs  lib.rs  state.rs
static/: index.html
