[package]
name = "othello"
description = "othello"
version = "0.1.0"
authors = ["Josh <josh@grayd.us>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
futures = "0.3.28"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "PointerEvent",
  "Window"
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
js-sys = "0.3.64"

